# ofxRobotArm

./: .gitattributes  .gitignore  .gitmodules  LICENSE  README.md  ReadMe.MD  addon_config.mk  installAddons.sh
_old_examples/example-follow-path/: README.md
_old_examples/example-follow-surface/: README.md
_old_examples/example-move-osc/: README.md
_old_examples/example-move-osc-unity/: README.MD
_old_examples/example-timeline/: README.md  addons.make
_old_examples/example-timeline-tcp/: addons.make
abb_egm_modules/: RobotArm_Motion.mod  SIO.cfg  wef.sys
data/: irb120.c4d  irb120.dae  ur5.c4d  ur5_joint_3.c4d
data/gml/: 127.gml  148.gml  159.gml  161.gml  215.gml  session-19-11-32-26.xml
data/irb120/: base_link.c4d  base_link.dae  link_1.dae  link_2.dae  link_3.dae  link_4.dae  link_5.dae  link_6.dae
example/: addons.make  example-linux.qbs  example.qbs  vscode_oF.code-workspace
example-abb-egm/: README.md  addons.make
example-abb-egm/src/: ofApp.cpp  ofApp.h
example-basic-move/: README.md  addons.make  openFrameworks-Info.plist
example-basic-move/example-basic-move.xcodeproj/: project.pbxproj
example-basic-move/src/: ofApp.cpp  ofApp.h
example-follow-mocap/: README.md  addons.make
example-follow-mocap-path/: README.md  addons.make
example-follow-mocap-path/example-follow-mocap-path.xcodeproj/: project.pbxproj
example-follow-mocap-path/src/: ofApp.cpp  ofApp.h
example-follow-mocap/example-follow-mocap.xcodeproj/: project.pbxproj
example-follow-mocap/src/: ofApp.cpp  ofApp.h
example-follow-path/: README.md  addons.make
example-follow-path/example-follow-path.xcodeproj/: project.pbxproj
example-follow-path/src/: ofApp.cpp  ofApp.h
example-follow-surface/: README.md  addons.make
example-follow-surface/example-follow-surface.xcodeproj/: project.pbxproj
example-follow-surface/src/: ofApp.cpp  ofApp.h
example-ik/: addons.make  config.make
example-ik/src/: ofApp.cpp  ofApp.h
example-linux/: addons.make  vscode_oF.code-workspace
example-linux/src/: main.cpp  ofApp.cpp  ofApp.h
example-move-osc/: addons.make
example-move-osc-unity/Assets/: IgnoreCollision.cs  UR5 Variant.prefab  ur5control.unity  ur5original.prefab
example-move-osc-unity/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
example-move-osc/example-move-osc.xcodeproj/: project.pbxproj
example-move-osc/src/: ofApp.cpp  ofApp.h
example-move-ose-unity/: .gitignore
example-move-ose-unity/Assets/: UR5Controller.cs  ur5control.unity
example-move-ose-unity/ProjectSettings/: TagManager.asset
example-simple/: README.md  addons.make
example-simple/src/: ofApp.cpp  ofApp.h
example-timeline/: README.md  addons.make
example-timeline-joints/: addons.make
example-timeline-joints/example-timeline-joints.xcodeproj/: project.pbxproj
example-timeline-joints/src/: main.cpp  ofApp.cpp  ofApp.h
example-timeline-tcp/example-timeline.xcodeproj/: project.pbxproj
example-timeline-tcp/src/: ofApp.cpp  ofApp.h
example-timeline/example-basic-timeline.xcodeproj/: project.pbxproj
example-timeline/example-timeline.xcodeproj/: project.pbxproj
example-timeline/src/: main.cpp  ofApp.cpp  ofApp.h
example-urdf/: .gitattributes  addons.make  config.make  vscode_oF.code-workspace
example-urdf/src/: main.cpp  ofApp.cpp  ofApp.h
example/src/: ofApp.cpp  ofApp.h
libs/abb_libegm/: .travis.yml  package.xml
libs/abb_libegm/include/abb_libegm/: egm_common_auxiliary.h  egm_controller_interface.h  egm_udp_server.h
libs/abb_libegm/proto/: README.md  egm_wrapper.pb.cc  egm_wrapper.pb.h  egm_wrapper.proto  egm_wrapper_trajectory.pb.cc  egm_wrapper_trajectory.pb.h
libs/abb_libegm/src/: egm_base_interface.cpp  egm_common.cpp  egm_logger.cpp  egm_trajectory_interface.cpp
libs/abb_librws/: .travis.yml  CMakeLists.txt  README.md
libs/abb_librws/.github/workflows/: windows-vcpkg.yml
libs/abb_librws/cmake/: abb_librwsConfigVersion.cmake  cmake_install.cmake
libs/abb_librws/include/abb_librws/: rws_rapid.h
libs/abb_librws/src/: rws_common.cpp  rws_interface.cpp  rws_poco_client.cpp  rws_rapid.cpp
libs/urDriver/: do_output.cpp  do_output.h  endian.h  robot_state.cpp  robot_state_RT.cpp  ur_communication.cpp  ur_communication.h  ur_driver.cpp  ur_driver.h  ur_realtime_communication.cpp  ur_realtime_communication.h
src/calibration/: WorkSurface.cpp
src/controllers/: LegacyRobotController.cpp  LegacyRobotController.h  Move.cpp  Move.h  PathController.cpp  (+7 more)
(+326 files in other folders)
