<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>abb_libegm</name>
  <version>1.2.0</version>
  <description>A C++ library for interfacing with ABB robot controllers supporting Externally Guided Motion (689-1)</description>
  <maintainer email="jon.tjerngren@se.abb.com">Jon Tjerngren</maintainer>
  <license>BSD 3-Clause</license>
  <url type="repository">https://github.com/ros-industrial/abb_libegm</url>
  <author>Jon Tjerngren</author>

  <buildtool_depend>cmake</buildtool_depend>

  <depend>boost</depend>
  <build_depend>protobuf-dev</build_depend>
  <build_export_depend>protobuf-dev</build_export_depend>
  <exec_depend>protobuf</exec_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
